--- a/package.json
+++ b/package.json
@@ -12,44 +12,44 @@
     "predeploy": "npm run build"
   },
   "dependencies": {
-    "@mdi/font": "5.9.55",
-    "core-js": "^3.6.5",
+    "@mdi/font": "7.1.96",
+    "core-js": "^3.26.1",
     "gh-pages": "^4.0.0",
     "roboto-fontface": "*",
-    "sass": "^1.55.0",
-    "vue": "^3.0.0",
+    "sass": "^1.57.0",
+    "vue": "^3.2.45",
     "vue-class-component": "^8.0.0-0",
-    "vue-router": "^4.0.0-0",
-    "vuetify": "npm:@vuetify/nightly@next",
-    "vuex": "^4.0.0-0",
-    "webfontloader": "^1.0.0"
+    "vue-router": "^4.1.6",
+    "vuetify": "^3.0.5",
+    "vuex": "^4.1.0",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.6",
+    "@babel/core": "^7.20.5",
     "@babel/eslint-parser": "^7.19.1",
-    "@types/webfontloader": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.33.0",
-    "@vitejs/plugin-vue": "^3.0.3",
-    "@vue/cli-plugin-babel": "~4.5.15",
-    "@vue/cli-plugin-eslint": "~4.5.15",
-    "@vue/cli-plugin-router": "~4.5.15",
-    "@vue/cli-plugin-typescript": "~4.5.15",
-    "@vue/cli-plugin-vuex": "~4.5.15",
-    "@vue/cli-service": "~4.5.15",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-prettier": "^6.0.0",
-    "@vue/eslint-config-typescript": "^7.0.0",
+    "@types/webfontloader": "^1.6.35",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/cli-plugin-babel": "~5.0.8",
+    "@vue/cli-plugin-eslint": "~5.0.8",
+    "@vue/cli-plugin-router": "~5.0.8",
+    "@vue/cli-plugin-typescript": "~5.0.8",
+    "@vue/cli-plugin-vuex": "~5.0.8",
+    "@vue/cli-service": "~5.0.8",
+    "@vue/compiler-sfc": "^3.2.45",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "babel-eslint": "^10.1.0",
-    "eslint": "^6.8.0",
+    "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-vue": "^7.0.0",
-    "prettier": "^2.2.1",
-    "sass-loader": "^8.0.2",
-    "typescript": "~4.1.5",
-    "vite": "^3.0.8",
-    "vite-plugin-vuetify": "^1.0.0-alpha.12",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vue": "^9.8.0",
+    "prettier": "^2.8.1",
+    "sass-loader": "^13.2.0",
+    "typescript": "~4.9.4",
+    "vite": "^4.0.1",
+    "vite-plugin-vuetify": "^1.0.1",
     "vue-cli-plugin-vuetify": "~2.5.8"
   },
   "eslintConfig": {
