--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue-router": "^4.1.6",
     "vuetify": "^3.0.5",
     "vuex": "^4.1.0",
+    "vuex-persistedstate": "^4.1.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
