--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdi/font": "7.1.96",
     "core-js": "^3.26.1",
     "gh-pages": "^4.0.0",
+    "jsdoc": "^4.0.0",
     "roboto-fontface": "*",
     "sass": "^1.57.0",
     "vue": "^3.2.45",
