--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@mdi/font": "7.1.96",
     "core-js": "^3.26.1",
+    "dayjs": "^1.11.7",
     "gh-pages": "^4.0.0",
     "jsdoc": "^4.0.0",
     "roboto-fontface": "*",
