--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@babel/eslint-parser": "^7.19.1",
     "@types/webfontloader": "^1.6.35",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
-    "@typescript-eslint/parser": "^5.46.1",
+    "@typescript-eslint/parser": "^5.48.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/cli-plugin-babel": "~5.0.8",
     "@vue/cli-plugin-eslint": "~5.0.8",
@@ -53,7 +53,8 @@
     "typescript": "~4.9.4",
     "vite": "^4.0.1",
     "vite-plugin-vuetify": "^1.0.1",
-    "vue-cli-plugin-vuetify": "~2.5.8"
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-eslint-parser": "^9.1.0"
   },
   "eslintConfig": {
     "root": true,
