--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@vue/compiler-sfc": "^3.2.45",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/runtime-core": "^3.2.45",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
