--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mdi/font": "7.1.96",
+    "axios": "^1.2.2",
     "core-js": "^3.26.1",
     "dayjs": "^1.11.7",
     "jsdoc": "^4.0.0",
